@@ -17,8 +17,7 @@
  設定:      [menu 編集]  [設定]
 
 -------------------------------------
-[予定・Todo] … 予定@, 〆切! を %sdays 日先まで表示.
-〆切!, todo+, 覚書-, 保留~ を上位 %tnum 個まで表示.
+%here%(howm-menu-legend-ja)
 %reminder
 -------------------------------------
 最近のメモ
